edit StoryBehind section width to match the design

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
         <!-- Story Behind -->
         <section class="story-behind d-flex align-items-center gap" style="--gap-size:70px">
             <img src="./imgaes/hero.jpg" alt="image" class="story-behind-img h-100 w-50 pr-15">
-            <div class="story-behind-content d-flex flex-column justify-space-around align-items-left px-15 h-100 py-60">
+            <div class="story-behind-content d-flex flex-column justify-space-around align-items-left px-15 h-100 py-60 w-50">
                 <div class="story-behind-head">Story Behind</div>
                 <div class="story-behind-logo py-30">
                     <a href="#">
