edit the path to the index.html

--- a/itemPage.html
+++ b/itemPage.html
@@ -58,7 +58,7 @@
                         <a href="#">Children</a>
                         <a href="#">Collection</a>
                     </div>
-                    <a href="./main.html" class="d-inline-block">
+                    <a href="./index.html" class="d-inline-block">
                         <img class="logo" src="./imgaes/logo.png" alt="logo">
                     </a>
                     <div class="right-header d-flex align-items-center justify-space-around">
@@ -306,7 +306,7 @@
         <div class="fluid-container h-100">
             <div class="footer-content d-flex justify-space-between gap h-100 py-60" style="--gap-size:80px">
                 <div class="footer-info">
-                    <a href="./main.html" class="d-inline-block mb-30">
+                    <a href="./index.html" class="d-inline-block mb-30">
                         <img class="logo" src="./imgaes/logo1.png" alt="logo">
                     </a>
                     <p class="footer-p fs-15 mb-30">Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.</p>
