add gap to hero section

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <!-- Hero -->
         <section class="hero">
             <div class="container h-100 px-15">
-                <div class="hero-section d-flex align-items-center" style="--gap-size:25px">
+                <div class="hero-section d-flex align-items-center gap" style="--gap-size:25px">
                         <div class="hero-content">
                             <h1 class="hero-h1">FASHION THAT LIKES TO SAY YES</h1>
                             <p class="hero-p fs-15">Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Vivamus suscipit tortor eget felis porttitor volutpat.</p>
